[package]
name = "usask_cba_calc"
version = "0.3.2"
edition = "2021"
description = "cli tool to calculate usask's first year engineering cba grades"
license = "MIT"
authors = ["Adhyan H. <adhyanpatel@gmail.com>"]
repository = "https://github.com/frroossst/usask_cba_calc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
serde_json = "1.0.107"

[profile.release]
strip = true
opt-level = "z"
lto = true
