[package]
name = "usask_cba_calc"
edition = "2021"
version = "0.4.1"
authors = ["Adhyan H. <adhyanpatel@gmail.com>"]
description = "cli tool to calculate usask's first year engineering cba grades"
license = "MIT"
repository = "https://github.com/frroossst/usask_cba_calc"

[dependencies]
ansi_term = "0.12.1"

[dependencies.tokio]
version = "1.33.0"
features = [ "io-std", "time", "rt-multi-thread", "macros", "io-util" ]


[dependencies.serde_json]
version = "1.0.107"

[profile.release]
opt-level = "z"
lto = true
strip = true

