[package]
name = "usask_cba_calc"
edition = "2021"
version = "0.4.2"
authors = ["Adhyan H. <adhyanpatel@gmail.com>"]
description = "cli tool to calculate usask's first year engineering cba grades"
license = "MIT"
repository = "https://github.com/frroossst/usask_cba_calc"

[dependencies]
ansi_term = "0.12.1"

[dependencies.serde_json]
version = "1.0.107"

